--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # TODO: Find proper logging format.
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
