--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
