--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.thymeleaf.check-template-location=false
+
+spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -7,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
