--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,15 @@ spring.thymeleaf.check-template-location=false
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# TODO: Find proper logging format.
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 
+# Schema generation:
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
 #spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+
+# TODO: Find proper logging format.
+#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.com.github.dockerjava=info
