Addition of proper logging.
Regular changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
 #spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
 
-# TODO: Find proper logging format.
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.testcontainers=warn
+logging.level.org.springframework=warn
 logging.level.com.github.dockerjava=info
+
+logging.level.wiki.hf=debug
