--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,7 @@
 spring.test.database.replace=none
 spring.datasource.url=jdbc:tc:postgresql:15:///test?TC_TMPFS=/testtmpfs:rw
+
+logging.level.org.testcontainers=warn
+logging.level.org.springframework=warn
+
+logging.level.wiki.hf=debug
