Changes to the domain model for better structure and readability. Regular changes.
Including the removing of entities page and section which are now part of item as an option of itemType. Refactoring of Item.java, ItemType.java, ItemTypeConverter.java, ItemTypeConverter.java and ItemRepositoryTest.java, to accommodate for the storage capability of pages and sections. Adaptation of all migration scripts according to the changes in the model. Deletion of now redundant repositories, services and controllers.

Changes to the enumerators, whereas values are now written out instead of a single char representing the beginning letter of the value for better readability and semantics overall. Refactoring of AccountType.java, AccountTypeConverter.java, AccountTypeConverterTest.java ActionType.java, ActionTypeConverter.java, ActionTypeConverterTest.java, ItemType.java, ItemTypeConverter.java and ItemTypeConverterTest.java.

Other regular and structural changes.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,11 @@
 spring.test.database.replace=none
 spring.datasource.url=jdbc:tc:postgresql:15:///test?TC_TMPFS=/testtmpfs:rw
 
+# Schema generation:
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+
 logging.level.org.testcontainers=warn
 logging.level.org.springframework=warn
 
