Further Implementation of api and Server Side Rendering (SSR). Regular changes.
Implementation of AccountCommand.java AccountForm.java and UserAlreadyExistsException.java for the creation of new accounts.

Implementation of account creation for api.

Implementation of PasswordPolicy.java and PasswordPolicyViolationException.java to ensure that proper and secure passwords are created along with a new account.

Regular changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-spring.thymeleaf.check-template-location=false
+# spring.jpa.open-in-view=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.open-in-view=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 
 # Schema generation:
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
-#spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
 
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.hibernate.type.descriptor.sql=trace
@@ -18,3 +17,9 @@ logging.level.org.springframework=warn
 logging.level.com.github.dockerjava=info
 
 logging.level.wiki.hf=debug
+
+password.policy.constraint.length=12
+password.policy.constraint.digit=?=.*\\d
+password.policy.constraint.lowercase=?=.*[a-z]
+password.policy.constraint.uppercase=?=.*[A-Z]
+password.policy.constraint.specialCharacters=?=.*[@#$^&+=_-:;,!*()%]
