--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ logging.level.com.github.dockerjava=info
 
 logging.level.wiki.hf=debug
 
-password.policy.constraint.length=12
-password.policy.constraint.digit=?=.*\\d
-password.policy.constraint.lowercase=?=.*[a-z]
-password.policy.constraint.uppercase=?=.*[A-Z]
-password.policy.constraint.specialCharacters=?=.*[@#$^&+=_-:;,!*()%]
+# password.policy.constraint.length=12
+# password.policy.constraint.digit=?=.*\\d
+# password.policy.constraint.lowercase=?=.*[a-z]
+# password.policy.constraint.uppercase=?=.*[A-Z]
+# password.policy.constraint.specialCharacters=?=.*[@#$^&+=_-:;,!*()%]
