--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.url=jdbc:tc:postgresql:15:///test?TC_TMPFS=/testtmpfs:rw
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=V1.0.0__schema.sql
 # spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
 
+spring.security.user.name=username
+spring.security.user.password=password
+spring.security.user.roles=ADMINISTRATOR
+
+rsa.public-key=classpath:certificates/public.pem
+rsa.private-key=classpath:certificates/private.pem
+
 logging.level.org.testcontainers=warn
 logging.level.org.springframework=warn
 
